// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`club-queries gql exports matches approved clubs query snapshot 1`] = `
"
  query GetAllApprovedClubs {
    getAllApprovedClubs {
      id
      name
      description
      creatorId
      teacherId
      type
      status
      minMember
      maxMember
      frequency
      clubTerm
      timetables {
        id
        clubId
        date
        room
        clubStartTime
        duration
      }
    }
  }
"
`;

exports[`club-queries gql exports matches declined clubs query snapshot 1`] = `
"
  query {
    getAllClubs(status: declined) {
      id
      name
      status
    }
  }
"
`;

exports[`club-queries gql exports matches delete club mutation snapshot 1`] = `
"
  mutation DeleteClub($id: ID!) {
    deleteClub(id: $id)
  }
"
`;

exports[`club-queries gql exports matches get all clubs query snapshot 1`] = `
"
  query GetAllClubs {
    getAllClubs {
      id
      name
      description
      creatorId
      teacherId
      type
      status
      preferredTeachers
      minMember
      maxMember
      frequency
      clubTerm
      timetables {
        id
        clubId
        date
        room
        clubStartTime
        duration
      }
    }
  }
"
`;

exports[`club-queries gql exports matches pending clubs query snapshot 1`] = `
"
  query GetAllPendingClubs {
    getAllPendingClubs {
      id
      name
      description
      creatorId
      teacherId
      type
      status
      preferredTeachers
      minMember
      maxMember
      frequency
      clubTerm
      timetables {
        id
        clubId
        date
        room
        clubStartTime
        duration
      }
    }
  }
"
`;

exports[`club-queries gql exports matches update club mutation snapshot 1`] = `
"
  mutation UpdateClub($input: UpdateClubInput!) {
    updateClub(input: $input) {
      id
      status
    }
  }
"
`;
